<resources>
    <string name="app_name">PincruxOfferwallJava</string>
    <string name="pub_text">Pincrux에서 발급받은 PubKey를 입력하세요.</string>
    <string name="pub_hint">PubKey 입력</string>
    <string name="next">다음</string>
    <string name="pub_toast">PubKey를 입력해 주세요.</string>

    <string name="offerwall_bar">Start Offerwall (BAR)</string>
    <string name="offerwall_bar_premium">Start Offerwall (BAR Premium)</string>
    <string name="offerwall_premium">Start Offerwall (Premium)</string>

    <string name="offerwall_activity">Activity</string>
    <string name="offerwall_view">View</string>
    <string name="offerwall_activity_landscape">Activity Landscape</string>
    <string name="offerwall_view_landscape">View Landscape</string>

</resources>